@@ -119,6 +119,7 @@ Cacti CHANGELOG
 -issue#5693: Fix Spikekill not following correct time in schedule, Improve PHP 8.3 in spikekill process
 -issue#5696: When inputting Chinese to search for graphics, garbled characters appear.
 -issue#5701: Bad URL formating in the templates_import.php preview mode
+-issue#5720: mysql.time_zone_name table DB check isn't being made on Remote Poller installation
 -feature#5692: Add a "device enabled/disabled" indicator next to the graphs
 
 1.2.26
